# bf

./: .gitignore
haskell/: bf.cabal
haskell/app/: Main.hs
haskell/test/: multiline.txt  simple.bf
python/: Dockerfile  bf.py  main.py  t  tests.py
rust/: Cargo.toml
rust/src/: main.rs  tests.rs
scala/: d
scala/bf/: build.sbt
scala/bf/src/main/scala/bf/: main.scala
