cabal-version:   3.14
name:            bf
version:         0.1.0.0
license:         NONE
author:          mtwtkman
maintainer:      924277+mtwtkman@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable bf
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
